# MyPaint

./: CMakeLists.txt  arrowgraphscene.cpp  arrowgraphscene.h  ellipsegraphscene.cpp  ellipsegraphscene.h  graphicsfigure.cpp  graphicsfigure.h  linegraphscene.cpp  linegraphscene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pengraphscene.cpp  pengraphscene.h  redactscene.cpp  redactscene.h  textgraphscene.cpp  textgraphscene.h  zoomgraphsene.cpp  zoomgraphsene.h
